html code: section infographic

--- a/index.html
+++ b/index.html
@@ -132,7 +132,42 @@
     </div>
   </section>
   
-  <!--section-->
+  <!--section infographic-->
+  <section class="infographic">
+    <div class="infographic-content">
+      <ul class="infographic-slider">
+        <li>
+          <div>
+            <h6>the see-through sea</h6>
+            <p>if the ocean were transparent, what would humans see?</p>
+            <a href="#FIXME" class="icon right-arrow">right-icon</a>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h6>the see-through sea</h6>
+            <p>if the ocean were transparent, what would humans see?</p>
+            <a href="#FIXME" class="icon right-arrow">right-icon</a>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h6>the see-through sea</h6>
+            <p>if the ocean were transparent, what would humans see?</p>
+            <a href="#FIXME" class="icon right-arrow">right-icon</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div class="controller">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+  </section>
+
+  <!---->
+
 </body>
 
 </html>
