--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <a href="#FIXME" class="icon hamburger">hamburger</a>
   </header>
-  
+
   <!--section banner-->
   <section class="banner">
     <div class="heading-backgroung"></div>
@@ -36,7 +36,9 @@
     </div>
     <div class="para-background"></div>
     <div class="banner-para">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nobis eos vero officia, incidunt laborum ut amet magni laudantium perspiciatis voluptates, dolorem reiciendis? Mollitia, excepturi quasi sunt nam ratione quas vitae voluptatum quod eius harum </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nobis eos vero officia, incidunt laborum ut
+        amet magni laudantium perspiciatis voluptates, dolorem reiciendis? Mollitia, excepturi quasi sunt nam ratione
+        quas vitae voluptatum quod eius harum </p>
     </div>
   </section>
 
@@ -44,7 +46,8 @@
   <section class="world-ocean">
     <div class="world-ocean-content">
       <h3>world ocean summit 2017</h3>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugit odio ipsam minima explicabo esse placeat quos doloremque sequi!</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugit odio ipsam minima explicabo esse
+        placeat quos doloremque sequi!</p>
       <a href="#FIXME">read more</a>
       <a href="#FIXME">book now</a>
       <ul>
@@ -53,8 +56,8 @@
           <span>bali, indonesia</span>
         </li>
         <li>
-            <a href="#FIXME" class="icon calender">calender</a>
-            <span>february 22nd-24th 2017</span>
+          <a href="#FIXME" class="icon calender">calender</a>
+          <span>february 22nd-24th 2017</span>
         </li>
       </ul>
     </div>
@@ -70,38 +73,38 @@
       <ul>
         <li class="featured1">
           <a href="#FIXME">
-          <h6>saving corals</h6>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <h6>saving corals</h6>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
           </a>
         </li>
         <li class="featured2">
           <a href="#FIXME">
-          <h6>saving corals</h6>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <h6>saving corals</h6>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
           </a>
         </li>
         <li class="featured3">
           <a href="#FIXME">
-          <h6>saving corals</h6>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <h6>saving corals</h6>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
           </a>
         </li>
         <li class="featured4">
           <a href="#FIXME">
-          <h6>saving corals</h6>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <h6>saving corals</h6>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
           </a>
         </li>
         <li class="featured5">
           <a href="#FIXME">
-          <h6>saving corals</h6>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <h6>saving corals</h6>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
           </a>
         </li>
         <li class="featured6">
           <a href="#FIXME">
-          <h6>saving corals</h6>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <h6>saving corals</h6>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
           </a>
         </li>
       </ul>
@@ -111,29 +114,36 @@
         <li class="featured-content1">
           <h5>saving corals</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit consequuntur error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum? Earum neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit consequuntur
+            error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
+            nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum? Earum
+            neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
           </p>
           <div>
             <a href="#FIXME" class="notepad icon">notepad</a>
             <span>economist intelligence unite</span>
-        </div>
+          </div>
         <li class="featured-content2">
-            <h5>saving corals</h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit consequuntur error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum? Earum neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
-            </p>
-            <div>
-              <a href="#FIXME" class="notepad icon">notepad</a>
-              <span>economist intelligence unite</span>
+          <h5>saving corals</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit consequuntur
+            error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
+            nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum? Earum
+            neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
+          </p>
+          <div>
+            <a href="#FIXME" class="notepad icon">notepad</a>
+            <span>economist intelligence unite</span>
           </div>
       </ul>
       <a href="#FIXME" class="featured-button">read more</a>
-      
+
     </div>
   </section>
-  
+
   <!--section infographic-->
   <section class="infographic">
+    <h4>infographic</h4>
     <div class="infographic-content">
       <ul class="infographic-slider">
         <li>
@@ -166,7 +176,26 @@
     </div>
   </section>
 
-  <!---->
+  <!--footer-->
+  <footer>
+    <form action="#FIXME">
+      <label for="femail">subscribe to our newsletter</label>
+      <input type="email" name="femail" placeholder="enter your email-id">
+      <span class="icon paper-plane"> paper-plane</span>
+    </form>
+    <div class="copy-right">
+      <div class="wrapper">
+        <h4> world ocean initiative</h4>
+        <ul class="social-icons">
+          <li><a href="#FIXME" target="_blank" class="icon facebook">facebook</a></li>
+          <li><a href="#FIXME" target="_blank" class="icon twitter">twitter</a></li>
+          <li><a href="#FIXME" target="_blank" class="icon google-plus">google-plus</a></li>
+          <li><a href="#FIXME" target="_blank" class="icon linkedin">linkedin</a></li>
+        </ul>
+        <a href="#FIXME" class="footer-button">contact us</a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
