css: code: navigatin

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!--navigation-->
   <header>
-    <div class="wrapper">
+    <div class="header-content wrapper">
       <h1><img src="https://via.placeholder.com/162x82" alt="logo"></h1>
       <nav>
         <ul class="nav-list">
@@ -25,7 +25,7 @@
           <li><a href="#FIXME">engage</a></li>
         </ul>
       </nav>
-      <a href="#FIXME" class="icon search">search</a>
+      <a href="#FIXME" class="icon search"></a>
     </div>
     <a href="#FIXME" class="icon hamburger">hamburger</a>
   </header>
