--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
       </nav>
       <a href="#FIXME" class="icon search"></a>
     </div>
-    <a href="#FIXME" class="icon hamburger">hamburger</a>
+    <a href="#FIXME" class="icon hamburger"></a>
   </header>
 
   <!--section banner-->
   <section class="banner">
-    <div class="heading-backgroung"></div>
     <div class="banner-heading">
       <h2>blue economy</h2>
     </div>
-    <div class="para-background"></div>
     <div class="banner-para">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nobis eos vero officia, incidunt laborum ut
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nobis eos vero officia, incidunt laborum ut
         amet magni laudantium perspiciatis voluptates, dolorem reiciendis? Mollitia, excepturi quasi sunt nam ratione
-        quas vitae voluptatum quod eius harum </p>
+        quas vitae voluptatum quod eius harum
+      </p>
     </div>
+
   </section>
 
   <!--section world-ocean-->
