css: code: section world-ocean but many things to be corrected

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       <a href="#FIXME">book now</a>
       <ul>
         <li>
-          <a href="#FIXME" class="icon location">location</a>
-          <span>bali, indonesia</span>
+          <span class="icon location"></span>
+          <address>bali, indonesia</address>
         </li>
         <li>
-          <a href="#FIXME" class="icon calender">calender</a>
+          <span class="icon calender"></span>
           <span>february 22nd-24th 2017</span>
         </li>
       </ul>
