--- a/index.html
+++ b/index.html
@@ -72,75 +72,80 @@
   <!--section featured-->
   <section class="featured">
     <h4>featured articles</h4>
-    <div class="featured-list">
-      <ul>
-        <li class="featured1">
-          <a href="#FIXME">
-            <h6>saving corals</h6>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </a>
-        </li>
-        <li class="featured2">
-          <a href="#FIXME">
-            <h6>saving corals</h6>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </a>
-        </li>
-        <li class="featured3">
-          <a href="#FIXME">
-            <h6>saving corals</h6>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </a>
-        </li>
-        <li class="featured4">
-          <a href="#FIXME">
-            <h6>saving corals</h6>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </a>
-        </li>
-        <li class="featured5">
-          <a href="#FIXME">
-            <h6>saving corals</h6>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </a>
-        </li>
-        <li class="featured6">
-          <a href="#FIXME">
-            <h6>saving corals</h6>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="featured-comtent">
-      <ul>
-        <li class="featured-content1">
-          <h5>saving corals</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit consequuntur
-            error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
-            nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum? Earum
-            neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
-          </p>
-          <div>
-            <a href="#FIXME" class="notepad icon">notepad</a>
-            <span>economist intelligence unite</span>
-          </div>
-        <li class="featured-content2">
-          <h5>saving corals</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit consequuntur
-            error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
-            nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum? Earum
-            neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
-          </p>
-          <div>
-            <a href="#FIXME" class="notepad icon">notepad</a>
-            <span>economist intelligence unite</span>
-          </div>
-      </ul>
-      <a href="#FIXME" class="featured-button">read more</a>
-
+    <div class="featured-container">
+      <div class="featured-list">
+        <ul>
+          <li class="featured1">
+            <a href="#FIXME">
+              <h6>saving corals</h6>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </a>
+          </li>
+          <li class="featured2">
+            <a href="#FIXME">
+              <h6>saving corals</h6>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </a>
+          </li>
+          <li class="featured3">
+            <a href="#FIXME">
+              <h6>saving corals</h6>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </a>
+          </li>
+          <li class="featured4">
+            <a href="#FIXME">
+              <h6>saving corals</h6>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </a>
+          </li>
+          <li class="featured5">
+            <a href="#FIXME">
+              <h6>saving corals</h6>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </a>
+          </li>
+          <li class="featured6">
+            <a href="#FIXME">
+              <h6>saving corals</h6>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="featured-content">
+        <ul>
+          <li class="featured-content1">
+            <h5>saving corals <span>blue economy</span></h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit
+              consequuntur
+              error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
+              nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum?
+              Earum
+              neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
+            </p>
+            <div>
+              <a href="#FIXME" class="notepad icon"></a>
+              <span>economist intelligence unite</span>
+            </div>
+          <li class="featured-content2">
+            <h5>saving corals</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit
+              consequuntur
+              error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
+              nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum?
+              Earum
+              neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
+            </p>
+            <div>
+              <!-- <a href="#FIXME" class="notepad icon"></a> -->
+              <span>economist intelligence unite</span>
+            </div>
+        </ul>
+        <a href="#FIXME" class="featured-button">read more</a>
+      </div>
     </div>
   </section>
 
