css: code: updated nav and section banner

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--navigation-->
   <header>
     <div class="header-content wrapper">
-      <h1><img src="https://via.placeholder.com/162x82" alt="logo"></h1>
+      <h1><img src="https://via.placeholder.com/162x78" alt="logo"></h1>
       <nav>
         <ul class="nav-list">
           <li><a href="#FIXME">home</a></li>
@@ -32,167 +32,175 @@
 
   <!--section banner-->
   <section class="banner">
-    <div class="banner-heading">
-      <h2>blue economy</h2>
-    </div>
-    <div class="banner-para">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nobis eos vero officia, incidunt laborum ut
-        amet magni laudantium perspiciatis voluptates, dolorem reiciendis? Mollitia, excepturi quasi sunt nam ratione
-        quas vitae voluptatum quod eius harum
-      </p>
+    <div class="wrapper">
+      <div class="banner-heading">
+        <h2>blue economy</h2>
+      </div>
+      <div class="banner-para">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nobis eos vero officia, incidunt laborum ut
+          amet magni laudantium perspiciatis voluptates, dolorem reiciendis? Mollitia, excepturi quasi sunt nam ratione
+          quas vitae voluptatum quod eius harum
+        </p>
+      </div>
     </div>
 
   </section>
 
   <!--section world-ocean-->
   <section class="world-ocean">
-    <div class="world-ocean-content">
-      <h3>world ocean summit 2017</h3>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugit odio ipsam minima explicabo esse
-        placeat quos doloremque sequi!</p>
-      <a href="#FIXME">read more</a>
-      <a href="#FIXME">book now</a>
-      <ul>
-        <li>
-          <span class="icon location"></span>
-          <address>bali, indonesia</address>
-        </li>
-        <li>
-          <span class="icon calender"></span>
-          <span>february 22nd-24th 2017</span>
-        </li>
-      </ul>
+    <div class="world-wrapper wrapper">
+      <div class="world-ocean-content">
+        <h3>world ocean summit 2017</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur fugit odio ipsam minima explicabo esse
+          placeat quos doloremque sequi!</p>
+        <a href="#FIXME">read more</a>
+        <a href="#FIXME">book now</a>
+        <ul>
+          <li>
+            <span class="icon location"></span>
+            <address>bali, indonesia</address>
+          </li>
+          <li>
+            <span class="icon calender"></span>
+            <span>february 22nd-24th 2017</span>
+          </li>
+        </ul>
+      </div>
+      <figure>
+        <img src="https://via.placeholder.com/601x364" alt="person speaking on mic">
+      </figure>
     </div>
-    <figure>
-      <img src="https://via.placeholder.com/601x364" alt="person speaking on mic">
-    </figure>
   </section>
 
   <!--section featured-->
   <section class="featured">
-    <h4>featured articles</h4>
-    <div class="featured-container">
-      <div class="featured-list">
-        <ul>
-          <li class="featured1">
-            <a href="#FIXME">
-              <h6>saving corals</h6>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </a>
-          </li>
-          <li class="featured2">
-            <a href="#FIXME">
-              <h6>saving corals</h6>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </a>
-          </li>
-          <li class="featured3">
-            <a href="#FIXME">
-              <h6>saving corals</h6>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </a>
-          </li>
-          <li class="featured4">
-            <a href="#FIXME">
-              <h6>saving corals</h6>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </a>
-          </li>
-          <li class="featured5">
-            <a href="#FIXME">
-              <h6>saving corals</h6>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </a>
-          </li>
-          <li class="featured6">
-            <a href="#FIXME">
-              <h6>saving corals</h6>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="featured-content">
-        <ul>
-          <li class="featured-content1">
-            <h5>saving corals <span>blue economy</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit
-              consequuntur
-              error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
-              nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum?
-              Earum
-              neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
-            </p>
-            <div>
-              <a href="#FIXME" class="notepad icon"></a>
-              <span>economist intelligence unite</span>
-            </div>
-          <li class="featured-content2">
-            <h5>saving corals</h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit
-              consequuntur
-              error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
-              nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum?
-              Earum
-              neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
-            </p>
-            <div>
-              <!-- <a href="#FIXME" class="notepad icon"></a> -->
-              <span>economist intelligence unite</span>
-            </div>
-        </ul>
-        <a href="#FIXME" class="featured-button">read more</a>
+    <div class="wrapper">
+      <h4>featured articles</h4>
+      <div class="featured-container">
+        <div class="featured-list">
+          <ul>
+            <li class="featured1">
+              <a href="#FIXME">
+                <h6>saving corals</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </a>
+            </li>
+            <li class="featured2">
+              <a href="#FIXME">
+                <h6>saving corals</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </a>
+            </li>
+            <li class="featured3">
+              <a href="#FIXME">
+                <h6>saving corals</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </a>
+            </li>
+            <li class="featured4">
+              <a href="#FIXME">
+                <h6>saving corals</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </a>
+            </li>
+            <li class="featured5">
+              <a href="#FIXME">
+                <h6>saving corals</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </a>
+            </li>
+            <li class="featured6">
+              <a href="#FIXME">
+                <h6>saving corals</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="featured-content">
+          <ul>
+            <li class="featured-content1">
+              <h5>saving corals <span>blue economy</span></h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit
+                consequuntur
+                error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
+                nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum?
+                Earum
+                neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
+              </p>
+              <div>
+                <a href="#FIXME" class="notepad icon"></a>
+                <span>economist intelligence unite</span>
+              </div>
+            <li class="featured-content2">
+              <h5>saving corals</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur possimus porro aperiam sit
+                consequuntur
+                error explicabo illo soluta tempora voluptas rerum ratione cupiditate quidem, facere autem distinctio
+                nostrum provident libero exercitationem omnis ad a corrupti accusantium architecto. Magnam, id ipsum?
+                Earum
+                neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
+              </p>
+              <div>
+                <!-- <a href="#FIXME" class="notepad icon"></a> -->
+                <span>economist intelligence unite</span>
+              </div>
+          </ul>
+          <a href="#FIXME" class="featured-button">read more</a>
+        </div>
       </div>
     </div>
   </section>
 
   <!--section infographic-->
   <section class="infographic">
-    <h4>infographic</h4>
-    <div class="infographic-content">
-      <ul class="infographic-slider">
-        <li>
-          <div>
-            <h6>the see-through sea</h6>
-            <p>if the ocean were transparent, what would humans see?</p>
-            <a href="#FIXME" class="icon right-arrow">right-icon</a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <h6>the see-through sea</h6>
-            <p>if the ocean were transparent, what would humans see?</p>
-            <a href="#FIXME" class="icon right-arrow">right-icon</a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <h6>the see-through sea</h6>
-            <p>if the ocean were transparent, what would humans see?</p>
-            <a href="#FIXME" class="icon right-arrow">right-icon</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div class="controller">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
+    <div class="wrapper">
+      <h4>infographic</h4>
+      <div class="infographic-content">
+        <ul class="infographic-slider">
+          <li>
+            <div>
+              <h6>the see-through sea</h6>
+              <p>if the ocean were transparent, what would humans see?</p>
+              <a href="#FIXME" class="icon right-arrow">right-icon</a>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h6>the see-through sea</h6>
+              <p>if the ocean were transparent, what would humans see?</p>
+              <a href="#FIXME" class="icon right-arrow">right-icon</a>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h6>the see-through sea</h6>
+              <p>if the ocean were transparent, what would humans see?</p>
+              <a href="#FIXME" class="icon right-arrow">right-icon</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="controller">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
     </div>
   </section>
 
   <!--footer-->
   <footer>
-    <form action="#FIXME">
-      <label for="femail">subscribe to our newsletter</label>
-      <input type="email" name="femail" placeholder="enter your email-id">
-      <span class="icon paper-plane"> paper-plane</span>
-    </form>
-    <div class="copy-right">
-      <div class="wrapper">
+    <div class="wrapper">
+      <form action="#FIXME">
+        <label for="femail">subscribe to our newsletter</label>
+        <input type="email" name="femail" placeholder="enter your email-id">
+        <span class="icon paper-plane"> paper-plane</span>
+      </form>
+      <div class="copy-right">
         <h4> world ocean initiative</h4>
         <ul class="social-icons">
           <li><a href="#FIXME" target="_blank" class="icon facebook">facebook</a></li>
