css: code: section world-ocean

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         <a href="#FIXME">book now</a>
         <ul>
           <li>
-            <span class="icon location"></span>
+            <a href="#FIXME" class="icon location"></a href="#FIXME">
             <address>bali, indonesia</address>
           </li>
           <li>
-            <span class="icon calender"></span>
+            <a href="#FIXME" class="icon calender"></a href="#FIXME">
             <span>february 22nd-24th 2017</span>
           </li>
         </ul>
