css: code: section featured

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <div class="wrapper">
       <h4>featured articles</h4>
       <div class="featured-container">
-        <div class="featured-list">
-          <ul>
+        <div class="featured-scroller">
+          <ul class="featured-list">
             <li class="featured1">
               <a href="#FIXME">
                 <h6>saving corals</h6>
@@ -116,6 +116,12 @@
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
               </a>
             </li>
+            <li class="featured7">
+              <a href="#FIXME">
+                <h6>saving corals</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </a>
+            </li>
           </ul>
         </div>
         <div class="featured-content">
@@ -130,10 +136,12 @@
                 Earum
                 neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
               </p>
-              <div>
+              <div class="notepad-content">
                 <a href="#FIXME" class="notepad icon"></a>
-                <span>economist intelligence unite</span>
+                <p>economist intelligence unite</p>
               </div>
+              <a href="#FIXME" class="featured-button">read more</a>
+            </li>
             <li class="featured-content2">
               <h5>saving corals</h5>
               <p>
@@ -144,12 +152,14 @@
                 Earum
                 neque praesentium nihil eveniet incidunt necessitatibus deserunt quia.
               </p>
-              <div>
-                <!-- <a href="#FIXME" class="notepad icon"></a> -->
-                <span>economist intelligence unite</span>
+              <div class="notepad-content">
+                <a href="#FIXME" class="notepad icon"></a>
+                <p>economist intelligence unite</p>
               </div>
+              <a href="#FIXME" class="featured-button">read more</a>
+            </li>
           </ul>
-          <a href="#FIXME" class="featured-button">read more</a>
+
         </div>
       </div>
     </div>
