css: code: section infographic

--- a/index.html
+++ b/index.html
@@ -171,33 +171,36 @@
       <h4>infographic</h4>
       <div class="infographic-content">
         <ul class="infographic-slider">
-          <li>
+          <li class="info-slide info1">
             <div>
               <h6>the see-through sea</h6>
               <p>if the ocean were transparent, what would humans see?</p>
-              <a href="#FIXME" class="icon right-arrow">right-icon</a>
+              <a href="#FIXME" class="icon right-arrow"></a>
             </div>
           </li>
-          <li>
+          <li class="info-slide info2">
             <div>
               <h6>the see-through sea</h6>
               <p>if the ocean were transparent, what would humans see?</p>
-              <a href="#FIXME" class="icon right-arrow">right-icon</a>
+              <a href="#FIXME" class="icon right-arrow"></a>
             </div>
           </li>
-          <li>
+          <li class="info-slide info3">
             <div>
               <h6>the see-through sea</h6>
               <p>if the ocean were transparent, what would humans see?</p>
-              <a href="#FIXME" class="icon right-arrow">right-icon</a>
+              <a href="#FIXME" class="icon right-arrow"></a>
             </div>
           </li>
         </ul>
       </div>
       <div class="controller">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
+        <ul>
+          <li class="line line1"></li>
+          <li class="line line2"></li>
+          <li class="line line3"></li>
+          <li class="active"></li>
+        </ul>
       </div>
     </div>
   </section>
