added different wrapper for section input-form and footer in html ; css code: section input-form

--- a/index.html
+++ b/index.html
@@ -205,25 +205,32 @@
     </div>
   </section>
 
-  <!--footer-->
-  <footer>
+  <!--section input form-->
+  <section class="input-form">
     <div class="wrapper">
       <form action="#FIXME">
-        <label for="femail">subscribe to our newsletter</label>
-        <input type="email" name="femail" placeholder="enter your email-id">
-        <span class="icon paper-plane"> paper-plane</span>
+        <label for="femail">Subscribe to our Newsletter</label>
+        <div>
+          <input type="email" name="femail" placeholder="enter your email-id">
+          <a href="#FIXME" class="icon paper-plane"></a>
+        </div>
       </form>
-      <div class="copy-right">
-        <h4> world ocean initiative</h4>
-        <ul class="social-icons">
-          <li><a href="#FIXME" target="_blank" class="icon facebook">facebook</a></li>
-          <li><a href="#FIXME" target="_blank" class="icon twitter">twitter</a></li>
-          <li><a href="#FIXME" target="_blank" class="icon google-plus">google-plus</a></li>
-          <li><a href="#FIXME" target="_blank" class="icon linkedin">linkedin</a></li>
-        </ul>
-        <a href="#FIXME" class="footer-button">contact us</a>
-      </div>
     </div>
+  </section>
+
+  <!--section footer-->
+  <footer>
+    <div class="footer-content wrapper">
+      <h4> world ocean initiative</h4>
+      <ul class="social-icons">
+        <li><a href="#FIXME" target="_blank" class="icon facebook">facebook</a></li>
+        <li><a href="#FIXME" target="_blank" class="icon twitter">twitter</a></li>
+        <li><a href="#FIXME" target="_blank" class="icon google-plus">google-plus</a></li>
+        <li><a href="#FIXME" target="_blank" class="icon linkedin">linkedin</a></li>
+      </ul>
+      <a href="#FIXME" class="footer-button">contact us</a>
+    </div>
+
   </footer>
 
 </body>
