css code: correct desktop site and some media querry

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
       </div>
       <figure>
-        <img src="https://via.placeholder.com/601x364" alt="person speaking on mic">
+        <!-- <img src="https://via.placeholder.com/601x364" alt="person speaking on mic"> -->
       </figure>
     </div>
   </section>
@@ -167,7 +167,7 @@
 
   <!--section infographic-->
   <section class="infographic">
-    <div class="wrapper">
+    <div class=" wrapper">
       <h4>infographic</h4>
       <div class="infographic-content">
         <ul class="infographic-slider">
@@ -221,12 +221,12 @@
   <!--section footer-->
   <footer>
     <div class="footer-content wrapper">
-      <h4> world ocean initiative</h4>
+      <h6> world ocean initiative</h6>
       <ul class="social-icons">
-        <li><a href="#FIXME" target="_blank" class="icon facebook">facebook</a></li>
-        <li><a href="#FIXME" target="_blank" class="icon twitter">twitter</a></li>
-        <li><a href="#FIXME" target="_blank" class="icon google-plus">google-plus</a></li>
-        <li><a href="#FIXME" target="_blank" class="icon linkedin">linkedin</a></li>
+        <li><a href="#FIXME" target="_blank" class="icon facebook"></a></li>
+        <li><a href="#FIXME" target="_blank" class="icon twitter"></a></li>
+        <li><a href="#FIXME" target="_blank" class="icon google-plus"></a></li>
+        <li><a href="#FIXME" target="_blank" class="icon linkedin"></a></li>
       </ul>
       <a href="#FIXME" class="footer-button">contact us</a>
     </div>
