css code: correct desktop site and responsive

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               </p>
               <div class="notepad-content">
                 <a href="#FIXME" class="notepad icon"></a>
-                <p>economist intelligence unite</p>
+                <span>economist intelligence unite</span>
               </div>
               <a href="#FIXME" class="featured-button">read more</a>
             </li>
@@ -154,7 +154,7 @@
               </p>
               <div class="notepad-content">
                 <a href="#FIXME" class="notepad icon"></a>
-                <p>economist intelligence unite</p>
+                <span>economist intelligence unite</span>
               </div>
               <a href="#FIXME" class="featured-button">read more</a>
             </li>
